--- a/feedsidebar/chrome/locale/ja-JP/locale.properties
+++ b/feedsidebar/chrome/locale/ja-JP/locale.properties
@@ -6,7 +6,7 @@ feedbar.checkingFeeds=\u30D5\u30A3\u30FC\u30C9\u3092\u78BA\u8A8D\u4E2D\u2026 (%S
 feedbar.errors.unavailable=\u30D5\u30A3\u30FC\u30C9\u304C\u5229\u7528\u3067\u304D\u307E\u305B\u3093
 feedbar.errors.invalidFeed=\u7121\u52B9\u306A\u30D5\u30A3\u30FC\u30C9\u3067\u3059\u3002
 feedbar.errors.noFeedsFound=\u30D5\u30A3\u30FC\u30C9\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
-feedbar.errors.noFeedsFoundMore=\u30B5\u30A4\u30C9\u30D0\u30FC\u3067\u30D5\u30A3\u30FC\u30C9\u306E\u9805\u76EE\u3092\u8868\u793A\u3059\u308B\u305F\u3081\u306B Firefox \u306E\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u6A5F\u80FD\u3067\u30D5\u30A3\u30FC\u30C9\u3092\u8CFC\u8AAD\u3059\u308B\u3002
+feedbar.errors.noFeedsFoundMore=\u30B5\u30A4\u30C9\u30D0\u30FC\u3067\u30D5\u30A3\u30FC\u30C9\u306E\u9805\u76EE\u3092\u8868\u793A\u3059\u308B\u305F\u3081\u306B Firefox \u306E\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u6A5F\u80FD\u3067\u30D5\u30A3\u30FC\u30C9\u3092\u8CFC\u8AAD\u3057\u307E\u3059\u3002
 feedbar.errors.noFeedsFoundLabel=\u8A73\u7D30\u306A\u60C5\u5831
 feedbar.errors.noFeedsFoundKey=M
 feedbar.errors.couldNotUnsubscribe=\u30A8\u30E9\u30FC: Feed Sidebar \u306F\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u304B\u3089\u30D5\u30A3\u30FC\u30C9\u3092\u9664\u53BB\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
