--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -2,7 +2,7 @@ extensions.feedbar@efinke.com.description=Toont de ongelezen berichten van uw Li
 feedbar.time.pm=NM
 feedbar.time.am=VM
 feedbar.nextUpdate=Volgende verversing: %S
-feedbar.checkingFeeds=%S van %S feeds wordt gecontroleerd...
+feedbar.checkingFeeds=%S van %S feeds wordt gecontroleerd…
 feedbar.errors.unavailable=Feed is niet beschikbaar
 feedbar.errors.invalidFeed=Ongeldige feed.
 feedbar.errors.noFeedsFound=Geen feeds gevonden.
