--- a/feedsidebar/chrome/locale/tr-TR/locale.properties
+++ b/feedsidebar/chrome/locale/tr-TR/locale.properties
@@ -1,3 +1,4 @@
+extensions.feedbar@efinke.com.description=Canlı yerimi öğelerini kenar çubuğunda göster.
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Sıradaki güncelleme: %S
@@ -5,8 +6,10 @@ feedbar.checkingFeeds=Beslemelerin %S de %S kontrol ediliyor...
 feedbar.errors.unavailable=Besleme Kullanılamıyor
 feedbar.errors.invalidFeed=Yanlış Besleme
 feedbar.errors.noFeedsFound=Besleme bulunamadı
+feedbar.errors.noFeedsFoundMore=Beslemelere abone olun ve bu beslemeleri Firefox'un Canlı Yer İmleri özelliğiyle kenar çubuğunda gösterin.
 feedbar.errors.noFeedsFoundLabel=Daha fazla bilgi
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=Hata: Besleme kenar çubuğu beslemeleri Yer İmlerinizden kaldıramadı.
 feedbar.errors.parseError=Besleme ayrıştırma hatası.
 feedbar.errors.invalidUrl=Bu bir besleme URLsi değil.
 feedbar.confirmOpenInTabs=Açmayı Onaylayın
@@ -20,3 +23,4 @@ feedbar.permalink=Kalıcı Bağlantı
 feedbar.feedLink=Besleme Linki
 feedbar.siteLink=Site Linki
 feedbar.previewHeader=Kaynak <a href="%S">%S</a>
+feedbar.download=İndir
