--- a/feedsidebar/chrome/locale/da-DK/locale.dtd
+++ b/feedsidebar/chrome/locale/da-DK/locale.dtd
@@ -27,6 +27,10 @@
 <!ENTITY feedbar.showLastDay "Seneste døgn">
 <!ENTITY feedbar.showLastWeek "Vis seneste uge">
 <!ENTITY feedbar.showLastMonth "Vis seneste måned">
+<!ENTITY feedbar.sortBy "Sorter efter...">
+<!ENTITY feedbar.sort.name "Navn">
+<!ENTITY feedbar.sort.default "Standard">
+<!ENTITY feedbar.sort.updated "Sidst opdateret">
 <!ENTITY feedbar.copyTitle "Kopier titel">
 <!ENTITY feedbar.copyLink "Kopier link">
 <!ENTITY feedbar.unsubscribe "Slet abonnement">
