--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -2,11 +2,11 @@ extensions.feedbar@efinke.com.description=Permette di mostrare i segnalibri Live
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Prossimo aggiornamento: %S
-feedbar.checkingFeeds=Controllo di %S feed su %S in corso...
+feedbar.checkingFeeds=Controllo di %S feed su %S in corso…
 feedbar.errors.unavailable=il feed non è disponibile
 feedbar.errors.invalidFeed=elemento della radice del feed non valido
 feedbar.errors.noFeedsFound=non è stato trovato alcun feed
-feedbar.errors.noFeedsFoundMore=Abbonarsi ad un feed tramite la funzione 'Segnalibri Live' di Firefox per visualizzarne gli elementi nella barra laterale
+feedbar.errors.noFeedsFoundMore=Sottoscrivere un feed tramite la funzione 'Segnalibri Live' di Firefox per visualizzarne gli elementi nella barra laterale
 feedbar.errors.noFeedsFoundLabel=Ulteriori informazioni
 feedbar.errors.noFeedsFoundKey=U
 feedbar.errors.couldNotUnsubscribe=Errore: impossibile eliminare il feed dai segnalibri
