--- a/feedsidebar/chrome/locale/zh-CN/locale.dtd
+++ b/feedsidebar/chrome/locale/zh-CN/locale.dtd
@@ -27,6 +27,10 @@
 <!ENTITY feedbar.showLastDay "昨天">
 <!ENTITY feedbar.showLastWeek "上星期">
 <!ENTITY feedbar.showLastMonth "上月">
+<!ENTITY feedbar.sortBy "分类">
+<!ENTITY feedbar.sort.name "名称">
+<!ENTITY feedbar.sort.default "默认">
+<!ENTITY feedbar.sort.updated "最近更新">
 <!ENTITY feedbar.copyTitle "复制标题">
 <!ENTITY feedbar.copyLink "复制链接">
 <!ENTITY feedbar.unsubscribe "未订阅">
