--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -1,8 +1,8 @@
 extensions.feedbar@efinke.com.description=Displays the items from your Live Bookmarks in a sidebar.
-feedbar.time.pm=PM
-feedbar.time.am=AM
-feedbar.nextUpdate=Next update: %S
-feedbar.checkingFeeds=Checking %S of %S feeds...
+
+# Updating 1 of 10 (Joe's Blog)
+feedbar.statusText=Updating %S of %S (%S)...
+feedbar.noContent=Feed has no content.
 
 feedbar.errors.unavailable=Feed is unavailable
 feedbar.errors.invalidFeed=Feed has invalid root element
@@ -21,8 +21,6 @@ feedbar.warnOnTabsMessage=You are about to open %S tabs. This might slow down th
 feedbar.confirmOpenInTabs=Confirm Open
 feedbar.openConfirmText=Open tabs
 
-feedbar.newItemTitle=New Feed Item
-feedbar.newItemsTitle=New Feed Items
 feedbar.newItemBody=One new item
 feedbar.newItemsBody=%S new items
 feedbar.workingOffline=Working offline
