--- a/feedsidebar/chrome/locale/da-DK/locale.properties
+++ b/feedsidebar/chrome/locale/da-DK/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Viser emnerne fra dine Live Bogmærker i sidebjælken.
+feedbar.statusText=Opdaterer %S af %S (%S)...
+feedbar.noContent=Feed har intet indhold.
 feedbar.errors.unavailable=Feed er ikke tilgængeligt
 feedbar.errors.invalidFeed=Ugyldigt feed.
 feedbar.errors.noFeedsFound=Ingen feed fundet.
