--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Stellt die ungelesenen Feed-Beiträge der dynamischen Lesezeichen in der Sidebar dar.
+feedbar.statusText=Aktualisiere %S von %S (%S)...
+feedbar.noContent=Feed hat keinen Inhalt
 feedbar.errors.unavailable=Feed ist nicht erreichbar
 feedbar.errors.invalidFeed=Ungültiger Feed
 feedbar.errors.noFeedsFound=Keine Feeds gefunden
