--- a/feedsidebar/chrome/locale/hu-HU/locale.properties
+++ b/feedsidebar/chrome/locale/hu-HU/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Megjeleníti az Élő Könyvjelzőket az oldalsávban.
+feedbar.statusText=%S/%S hírfolyam (%S) frissítése...
+feedbar.noContent=A hírfolyam üres.
 feedbar.errors.unavailable=Hírfolyam elérhetetlen
 feedbar.errors.invalidFeed=Érvénytelen hírfolyam.
 feedbar.errors.noFeedsFound=Nincs hírfolyam.
