--- a/feedsidebar/chrome/locale/it-IT/locale.properties
+++ b/feedsidebar/chrome/locale/it-IT/locale.properties
@@ -1,6 +1,8 @@
 extensions.feedbar@efinke.com.description=Permette di mostrare i segnalibri Live nella barra laterale
+feedbar.statusText=Aggiornamento di %S feed su %S (%S) in corso…
+feedbar.noContent=il feed non contiene elementi
 feedbar.errors.unavailable=il feed non è disponibile
-feedbar.errors.invalidFeed=elemento della radice del feed non valido
+feedbar.errors.invalidFeed=feed non valido
 feedbar.errors.noFeedsFound=non è stato trovato alcun feed
 feedbar.errors.noFeedsFoundMore=Sottoscrivere un feed tramite la funzione 'Segnalibri Live' di Firefox per visualizzarne gli elementi nella barra laterale
 feedbar.errors.noFeedsFoundLabel=Ulteriori informazioni
