--- a/feedsidebar/chrome/locale/nl-NL/locale.properties
+++ b/feedsidebar/chrome/locale/nl-NL/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Toont de ongelezen berichten van uw Livebladwijzers in de zijbalk.
+feedbar.statusText=%S van %S (%S) wordt bijgewerkt…
+feedbar.noContent=Feed heeft geen inhoud
 feedbar.errors.unavailable=Feed is niet beschikbaar
 feedbar.errors.invalidFeed=Ongeldige feed.
 feedbar.errors.noFeedsFound=Geen feeds gevonden.
