--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Wyświetla nieprzeczytane wiadomości z dynamicznych zakładek w panelu bocznym
+feedbar.statusText=Aktualizacja %S z %S (%S)…
+feedbar.noContent=Kanał nic nie zawiera.
 feedbar.errors.unavailable=Kanał jest niedostępny
 feedbar.errors.invalidFeed=Nieprawidłowy kanał
 feedbar.errors.noFeedsFound=Nie znaleziono kanałów
