--- a/feedsidebar/chrome/locale/sk-SK/locale.properties
+++ b/feedsidebar/chrome/locale/sk-SK/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=Zobrazenie správ z Aktívnych záložiek v bočnom paneli.
+feedbar.statusText=Načítavanie %S z %S (%S)...
+feedbar.noContent=Kanál je bez obsahu.
 feedbar.errors.unavailable=Kanál je nedostupný
 feedbar.errors.invalidFeed=Neplatný kanál.
 feedbar.errors.noFeedsFound=Neboli nájdené žiadne kanály.
