--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -1,4 +1,6 @@
 extensions.feedbar@efinke.com.description=在侧栏显示实时书签里的项目
+feedbar.statusText=正在更新 %S/%S (%S)...
+feedbar.noContent=订阅为空白内容
 feedbar.errors.unavailable=没有新项目
 feedbar.errors.invalidFeed=订阅含有无效根元素
 feedbar.errors.noFeedsFound=找不到订阅
@@ -19,6 +21,6 @@ feedbar.workingOffline=脱机工作
 feedbar.permalink=永久链接
 feedbar.feedLink=订阅链接
 feedbar.siteLink=网站链接
-feedbar.publishedOn=%S 发布于 <a href="%S">%S</a>
+feedbar.publishedOn=<a href="%S">%S</a> 发布于 %S
 feedbar.previewHeader=来自 <a href="%S">%S</a>
 feedbar.download=下载
