--- a/feedsidebar/chrome/locale/fr-FR/locale.properties
+++ b/feedsidebar/chrome/locale/fr-FR/locale.properties
@@ -1,6 +1,8 @@
 extensions.feedbar@efinke.com.description=Panneau latéral listant les marque-pages dynamiques n'ayant pas été lus.
-feedbar.errors.unavailable=Le flux n'est pas accessible
-feedbar.errors.invalidFeed=Le flux a un élément racine incorrect
+feedbar.statusText=Mise à jour : %S sur %S (%S)…
+feedbar.noContent=Le flux n'a aucun contenu.
+feedbar.errors.unavailable=Le flux n'est pas accessible.
+feedbar.errors.invalidFeed=Le flux a un élément racine incorrect.
 feedbar.errors.noFeedsFound=Aucun flux n'a été trouvé.
 feedbar.errors.noFeedsFoundMore=Inscrivez-vous à un flux RSS avec le principe des marque-pages dynamiques de Firefox, afin de voir ses éléments dans le panneau latéral.
 feedbar.errors.noFeedsFoundLabel=Plus d'informations
