--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -39,3 +39,6 @@ feedbar.publishedOn=Published on %S in <a href="%S">%S</a>
 feedbar.previewHeader=From <a href="%S">%S</a>
 
 feedbar.download=Download
+
+feedbar.trendBookmarkTitle=Latest Trending Search Terms
+feedbar.trendBookmarkDescription=The latest trending search terms on Twitter, Digg, and the rest of the social Web.
